[BUG] BGE steering #46557

Closed
opened 2015-10-21 21:33:16 +02:00 by alabd · 9 comments

System Information
Arch linux // UbuntuStudio 14.04

Blender Version
Broken: 2.75a & 2.76
Worked: 2.69 with bug (stopped in steering)

Hi!
When I run this example, blender crashed and in terminal:

Blender Game Engine Started
Writing: /tmp/road.crash.txt
Segmentation fault (core dumped)

and road.crash.txt :

# Blender 2.76 (sub 0), Commit date: 2015-10-11 06:55, Hash 48f7dd6
bpy.context.object.game.physics_type = 'CHARACTER'  # Property
bpy.context.object.game.use_actor = True  # Property

# backtrace
./blender(BLI_system_backtrace+0x30) [0x9654fa0]
./blender() [0x8b9a436]
./blender() [0x8b9a61f]
[0xb7734404]

Here is .blend file:
road.blend

**System Information** Arch linux // UbuntuStudio 14.04 **Blender Version** Broken: 2.75a & 2.76 Worked: 2.69 with bug (stopped in steering) Hi! When I run this example, blender crashed and in terminal: ``` Blender Game Engine Started Writing: /tmp/road.crash.txt Segmentation fault (core dumped) ``` and road.crash.txt : ``` # Blender 2.76 (sub 0), Commit date: 2015-10-11 06:55, Hash 48f7dd6 bpy.context.object.game.physics_type = 'CHARACTER' # Property bpy.context.object.game.use_actor = True # Property # backtrace ./blender(BLI_system_backtrace+0x30) [0x9654fa0] ./blender() [0x8b9a436] ./blender() [0x8b9a61f] [0xb7734404] ``` Here is .blend file: [road.blend ](http://www.mediafire.com/download/lzw89w1tg0pgdlc/road.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by alabd 2015-10-21 21:33:16 +02:00
Author

Added subscriber: @alabd14313

Added subscriber: @alabd14313

Added subscriber: @you.le

Added subscriber: @you.le

Hi, when you choose a "collision bound" option the .blend stops crashing (but the physics character seems not well supported). I'll see if I can find with what version the file has been saved (unless you can tell us with what version you have saved the file?) and if I can add something in versioning_270.c (or somewhere else) to avoid the crash...

Hi, when you choose a "collision bound" option the .blend stops crashing (but the physics character seems not well supported). I'll see if I can find with what version the file has been saved (unless you can tell us with what version you have saved the file?) and if I can add something in versioning_270.c (or somewhere else) to avoid the crash...

So it seems the file has been saved with a 2.76 blender's version (I don't know the hash... Could be 48f7dd6 (the one mentionned in the bug report)). When it has been saved, collision bounds option WAS EMPTY. It's weird... In versioning_260.c, there are already this lines:
if (main->versionfile < 260 || (main->versionfile == 260 && main->subversionfile < 1)) {
Object *ob;

for (ob = main->object.first; ob; ob = ob->id.next) {
ob->collision_boundtype = ob->boundtype;
}
Replacing 260 with 280 fixes the issue but it's dirt and as said sybren, that doesn't fix the "empty Collision Bounds option" issue.

EDIT: Steps to reproduce the bug: set the default cube collision bounds to triangle mesh. Switch to character physics.

Temp Fix for rna_GameObjectSettings_physics_type_set: http://www.pasteall.org/61841/diff (I made a mistake in the comment)
Need Campbell Barton opinion about .blend already saved with "collision bounds option empty" (add something in versioning_270.c or not?)

So it seems the file has been saved with a 2.76 blender's version (I don't know the hash... Could be 48f7dd6 (the one mentionned in the bug report)). When it has been saved, collision bounds option WAS EMPTY. It's weird... In versioning_260.c, there are already this lines: if (main->versionfile < 260 || (main->versionfile == 260 && main->subversionfile < 1)) { Object *ob; for (ob = main->object.first; ob; ob = ob->id.next) { ob->collision_boundtype = ob->boundtype; } Replacing 260 with 280 fixes the issue but it's dirt and as said sybren, that doesn't fix the "empty Collision Bounds option" issue. EDIT: Steps to reproduce the bug: set the default cube collision bounds to triangle mesh. Switch to character physics. Temp Fix for rna_GameObjectSettings_physics_type_set: http://www.pasteall.org/61841/diff (I made a mistake in the comment) Need Campbell Barton opinion about .blend already saved with "collision bounds option empty" (add something in versioning_270.c or not?)
Author

The version I used is official binary release(2.76) from blender.org

The version I used is official binary release(2.76) from blender.org

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 40b2e75b20

This issue was referenced by 40b2e75b2018a2ff348013ee8322ad2e30734a94
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46557
No description provided.